[package]
name = "diffable-arguments"
version = "0.1.0"
authors = ["Evan Almloff <ealmlof1@stumail.jccc.edu>"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.3.5"
bumpalo = { version = "3.11.1", features = ["collections", "boxed"] }
slotmap = "1.0.6"
rustc-hash = "1.1.0"
compact_str = "0.6.1"

[dev.dependencies]
test = { path = "." }

[lib]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
debug = true


[[bench]]
name = "bench"
harness = false

